--- a/microposts/templates/base.html
+++ b/microposts/templates/base.html
@@ -6,7 +6,8 @@
 	<a href="{% url 'microposts.views.home' %}"><h1>Microposts</h1></a>
 	{% block content %}
 	<a href="{% url 'django.contrib.auth.views.login' %}">Click here to login!</a> <br>
-	<a href="{% url 'posts.views.allposts' %}">Click here to see all posts!</a>
+	<a href="{% url 'posts.views.allposts' %}">Click here to see all posts!</a> <br>
+	<a href="{% url 'posts.views.register' %}">Click here to register!</a>
 	{% endblock content %}
 </body>
 </html>
